@@ -899,9 +899,11 @@ void* IconDatabase::iconDatabaseSyncThread()
     // Existence of a journal file is evidence of a previous crash/force quit and automatically qualifies
     // us to do an integrity check
     String journalFilename = m_completeDatabasePath + "-journal";
-    if (!checkIntegrityOnOpen)
+    if (!checkIntegrityOnOpen) {
+        AutodrainedPool pool;
         checkIntegrityOnOpen = fileExists(journalFilename);
-        
+    }
+    
     {
         MutexLocker locker(m_syncLock);
         if (!m_syncDB.open(m_completeDatabasePath)) {
